--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "grunt" : "0.4.2",
     "grunt-nodemon" : "~0.1.2",
     "nodemon": "~1.0.5",
-    "matchdep" : "0.3.0"
+    "matchdep" : "0.3.0",
+    "mongoose" : "~3.8.12",
+    "morgan": "~1.1.1"
   },
 
   "devDependencies": {
