--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "nodemon": "~1.0.5",
     "matchdep" : "0.3.0",
     "mongoose" : "~3.8.12",
-    "morgan": "~1.1.1"
+    "underscore": "~1.6.0",
+    "morgan": "~1.1.1",
+    "async" : "0.9.0"
   },
 
   "devDependencies": {
